        Reviewed by Dan Bernstein.

Frequent crashes in CFURLCache code on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=55412
        <rdar://problem/9063922>

        CString is evil, it has two lengths which can be different - specifically, fileSystemRepresentation()
        creates a string with maximum possible buffer size. A path with garbage at the end confused
        CFURLCache into corrupting its data structures.

        * Shared/WebProcessCreationParameters.h: Added a FIXME about merging Mac and Windows code.
        This problem wouldn't have occured if we didn't use CString in the first place.

        * UIProcess/mac/WebContextMac.mm: (WebKit::WebContext::platformInitializeWebProcess):
        Added an assertion matching Windows behavior (seems likely that NSURLCache also wouldn't
        have liked trailing slash).

        * UIProcess/win/WebContextWin.cpp: (WebKit::WebContext::platformInitializeWebProcess):
        Made slash removal conditional for robustness.

        * WebProcess/mac/WebProcessMac.mm: (WebKit::WebProcess::platformInitializeWebProcess):
        Use actual string length, not CString::length().



Canonical link: https://commits.webkit.org/69829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79927 268f45cc-cd09-0410-ab3c-d52691b4dbfc